--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -1,10 +1,11 @@
 .App {
    text-align: center;
+   font-family: 'Playfair Display', serif;
 }
 
 h1 {
-    font-size: 2rem;
-    color: #5C4033;
+    font-size: 2.6rem;
+    color: #FFFFFF;
 }
 
 input[type="text"] {
@@ -14,7 +15,11 @@ input[type="text"] {
 }
 
 .header {
-    margin: 2rem 1rem 100px;
+    padding: 3rem 1rem 50px;
+    margin-bottom: 50px;
+    position: sticky;
+    top: 0;
+    background-color: #5C4033;
 }
 
 .search-text {
@@ -40,7 +45,7 @@ input[type="text"] {
 .recipe-card {
     max-width: 300px;
     border: 1px solid #5C4033;
-    border-radius: 25px;
+    border-radius: 15px;
     flex-direction: column;
     align-items: center;
     overflow: hidden;
@@ -80,13 +85,13 @@ input[type="text"] {
 }
 .recipe-detail-card {
     border: 1px solid #5C4033;
-    border-radius: 25px;
+    border-radius: 15px;
     align-items: center;
     overflow: hidden;
     justify-content: center;
     max-width: 700px;
-    padding: 10px;
     text-align: center;
+    padding-bottom: 10px;
 }
 
 .recipe-detail h2 {
@@ -112,13 +117,18 @@ input[type="text"] {
     color: white;
 }
 
-.ingredient-list {
+.ingredients-wrap {
     text-align: left;
     color: #5C4033;
+    padding: 10px;
+}
+
+.ingredients-list {
+    font-family: 'Playfair Display', serif;
 }
 
 .recipe-detail-card a {
-    font-size: 1.1rem;
+    font-size: 1rem;
     font-weight: bold;
     color: #5C4033;
 }
