--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -1,6 +1,11 @@
 .App {
-   text-align: center;
-   font-family: 'Playfair Display', serif;
+    text-align: center;
+    font-family: 'Playfair Display', serif;
+}
+
+body {
+    margin: 0;
+    padding: 0;
 }
 
 h1 {
@@ -82,6 +87,7 @@ input[type="text"] {
     display: flex;
     justify-content: center;
     margin-top: 2rem;
+    margin-bottom: 200px;
 }
 .recipe-detail-card {
     border: 1px solid #5C4033;
@@ -89,7 +95,7 @@ input[type="text"] {
     align-items: center;
     overflow: hidden;
     justify-content: center;
-    max-width: 700px;
+    max-width: 500px;
     text-align: center;
     padding-bottom: 10px;
 }
@@ -97,11 +103,15 @@ input[type="text"] {
 .recipe-detail h2 {
     color: #5C4033;
     font-size: 1.6rem;
+    padding: 10px;
 }
 
 .recipe-detail-card img {
     object-fit: contain;
     width: 100%;
+    border-top: 1px solid #5C4033;
+    border-bottom: 1px solid #5C4033;
+
 }
 
 .back-button {
